--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,8 @@ services:
     environment:
       DEFAULT_EMAIL: ${DEFAULT_EMAIL:?}
     restart: always
+
+networks:
+  default:
+    external: true
+    name: ${NETWORK:?}
